--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
-.DS_StorenThumbs.dbn.vscode/n.idea/nnode_modules/ndist/n.cache/n
+.DS_Store
+Thumbs.db
+.vscode/
+.idea/
+node_modules/
+dist/
+.cache/
